.metals/.reports/metals-full/2023-09-30/r_compiler-error_17-59-02-687
file%3A%2F%2F%2FD%3A%2FAkshat%2FCaseStudy%2FAdthena%2Fmain%2Fscala%2FBasketPricing.scala:4: error: identifier expected but . found
package.
       ^
occurred in the presentation compiler.

action parameters:
uri: file:///D:/Akshat/CaseStudy/Adthena/main/scala/BasketPricing.scala
text:
import scala.io.StdIn
import java.text.NumberFormat
import java.util.Locale
package.
// Define a case class to represent an item in the basket
case class Item(name: String, price: Double)

object BasketPricing {
    // Define a map of items and their prices
    val items = Map(
        "Soup" -> Item("Soup", 0.65),
        "Bread" -> Item("Bread", 0.80),
        "Milk" -> Item("Milk", 1.30),
        "Apples" -> Item("Apples", 1.00)
        )

    // Calculate the discount amount for Apples (10% off)
    def applesDiscount(items: List[Item]): Double = {
        val apples = items.filter(_.name == "Apples")
        val totalApplesPrice = apples.map(_.price).sum
        val discount = totalApplesPrice * 0.1
        discount
    }
    // Calculate the discount amount for Bread (half price when buying 2 tins of Soup)
    def soupBreadDiscount(items: List[Item]): Double = {
        val soupCount = items.count(_.name == "Soup")
        val breadCount = items.count(_.name == "Bread")
        val eligibleBreadCount = soupCount / 2
        val discount = eligibleBreadCount * items.find(_.name == "Bread").map(_.price).getOrElse(0.0) * 0.5
        discount
    }   

    // Calculate the subtotal, discounts, and total price
    def calculatePrice(items: List[Item]): Double = {
  val subtotal = items.map(_.price).sum
  val applesDiscountAmount = applesDiscount(items)
  val soupBreadDiscountAmount = soupBreadDiscount(items)
  val totalDiscount = applesDiscountAmount + soupBreadDiscountAmount
  val totalPrice = subtotal - totalDiscount
  val currencyFormatter = NumberFormat.getCurrencyInstance(Locale.UK)

  println("Basket Items:")
  items.groupBy(_.name).foreach { case (name, itemList) =>
    val quantity = itemList.size
    val price = itemList.head.price
    println(s"$name - Quantity: $quantity, Price: ${currencyFormatter.format(price)}")
  }

  // Print the subtotal, discounts, and total price
  println(s"Subtotal: ${currencyFormatter.format(subtotal)}")
  if (totalDiscount > 0) {
    println(s"Apples 10% off: ${currencyFormatter.format(applesDiscountAmount)}")
    println(s"Total price: ${currencyFormatter.format(totalPrice)}")
  } else {
    println("(No offers available)")
    println(s"Total price: ${currencyFormatter.format(totalPrice)}")
  }

  // Return the total price
  totalPrice
}

    def main(args: Array[String]): Unit = {
        // Get the basket items from command-line arguments and calculate the price
        val basketItems = args.flatMap(items.get)
        calculatePrice(basketItems.toList)
    }
}




error stacktrace:
scala.meta.internal.parsers.Reporter.syntaxError(Reporter.scala:16)
	scala.meta.internal.parsers.Reporter.syntaxError$(Reporter.scala:16)
	scala.meta.internal.parsers.Reporter$$anon$1.syntaxError(Reporter.scala:22)
	scala.meta.internal.parsers.Reporter.syntaxError(Reporter.scala:17)
	scala.meta.internal.parsers.Reporter.syntaxError$(Reporter.scala:17)
	scala.meta.internal.parsers.Reporter$$anon$1.syntaxError(Reporter.scala:22)
	scala.meta.internal.parsers.ScalametaParser.syntaxErrorExpected(ScalametaParser.scala:367)
	scala.meta.internal.parsers.ScalametaParser.name(ScalametaParser.scala:1146)
	scala.meta.internal.parsers.ScalametaParser.termName(ScalametaParser.scala:1149)
	scala.meta.internal.parsers.ScalametaParser.qualId(ScalametaParser.scala:1229)
	scala.meta.internal.parsers.ScalametaParser.$anonfun$packageOrPackageObjectDef$1(ScalametaParser.scala:4538)
	scala.meta.internal.parsers.ScalametaParser.atPos(ScalametaParser.scala:300)
	scala.meta.internal.parsers.ScalametaParser.autoPos(ScalametaParser.scala:346)
	scala.meta.internal.parsers.ScalametaParser.packageOrPackageObjectDef(ScalametaParser.scala:4526)
	scala.meta.internal.parsers.ScalametaParser$$anonfun$2.applyOrElse(ScalametaParser.scala:4372)
	scala.meta.internal.parsers.ScalametaParser$$anonfun$2.applyOrElse(ScalametaParser.scala:4366)
	scala.PartialFunction.$anonfun$runWith$1$adapted(PartialFunction.scala:145)
	scala.meta.internal.parsers.ScalametaParser.statSeqBuf(ScalametaParser.scala:4357)
	scala.meta.internal.parsers.ScalametaParser.$anonfun$batchSource$13(ScalametaParser.scala:4594)
	scala.Option.getOrElse(Option.scala:189)
	scala.meta.internal.parsers.ScalametaParser.$anonfun$batchSource$1(ScalametaParser.scala:4594)
	scala.meta.internal.parsers.ScalametaParser.atPos(ScalametaParser.scala:300)
	scala.meta.internal.parsers.ScalametaParser.autoPos(ScalametaParser.scala:346)
	scala.meta.internal.parsers.ScalametaParser.batchSource(ScalametaParser.scala:4550)
	scala.meta.internal.parsers.ScalametaParser.$anonfun$source$1(ScalametaParser.scala:4543)
	scala.meta.internal.parsers.ScalametaParser.atPos(ScalametaParser.scala:300)
	scala.meta.internal.parsers.ScalametaParser.autoPos(ScalametaParser.scala:346)
	scala.meta.internal.parsers.ScalametaParser.source(ScalametaParser.scala:4543)
	scala.meta.internal.parsers.ScalametaParser.entrypointSource(ScalametaParser.scala:4548)
	scala.meta.internal.parsers.ScalametaParser.parseSourceImpl(ScalametaParser.scala:127)
	scala.meta.internal.parsers.ScalametaParser.$anonfun$parseSource$1(ScalametaParser.scala:124)
	scala.meta.internal.parsers.ScalametaParser.parseRuleAfterBOF(ScalametaParser.scala:51)
	scala.meta.internal.parsers.ScalametaParser.parseRule(ScalametaParser.scala:46)
	scala.meta.internal.parsers.ScalametaParser.parseSource(ScalametaParser.scala:124)
	scala.meta.parsers.Parse$.$anonfun$parseSource$1(Parse.scala:29)
	scala.meta.parsers.Parse$$anon$1.apply(Parse.scala:36)
	scala.meta.parsers.Api$XtensionParseDialectInput.parse(Api.scala:25)
	scala.meta.internal.semanticdb.scalac.ParseOps$XtensionCompilationUnitSource.toSource(ParseOps.scala:17)
	scala.meta.internal.semanticdb.scalac.TextDocumentOps$XtensionCompilationUnitDocument.toTextDocument(TextDocumentOps.scala:206)
	scala.meta.internal.pc.SemanticdbTextDocumentProvider.textDocument(SemanticdbTextDocumentProvider.scala:54)
	scala.meta.internal.pc.ScalaPresentationCompiler.$anonfun$semanticdbTextDocument$1(ScalaPresentationCompiler.scala:350)
